--- a/MockupApp/MockupApp/MockupApp/MockupApp.csproj
+++ b/MockupApp/MockupApp/MockupApp/MockupApp.csproj
@@ -44,6 +44,15 @@
     <Compile Include="BoomStructuur.xaml.cs">
       <DependentUpon>BoomStructuur.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BsActiviteiten.xaml.cs">
+      <DependentUpon>BsActiviteiten.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BsCaseCatNotitie.xaml.cs">
+      <DependentUpon>BsCaseCatNotitie.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BsCases.xaml.cs">
+      <DependentUpon>BsCases.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Clients.xaml.cs">
       <DependentUpon>Clients.xaml</DependentUpon>
     </Compile>
@@ -122,6 +131,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Clients_1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BsActiviteiten.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BsCases.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BsCaseCatNotitie.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
